--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -203,11 +203,11 @@
                             }
 
                             #labial-nyx-2 {
-                                width: 51%;
+                                width: 57%;
                             }
 
                             #gloss-maybelline {
-                                width: 55%;
+                                width: 57%;
                             }
 
                             #lipglass,
@@ -249,7 +249,7 @@
                             }
 
                             #paleta-anastasia{
-                                width: 42%;
+                                width: 50%;
                             }
 
                             #paleta-huda {
@@ -261,12 +261,17 @@
                                 #corrector-tarte,
                                 #polvo-huda,
                                 #spray-too-faced,
-                                #rubor-too-faced {
+                                #rubor-too-faced,
+                                #stick-fenty,
+                                #iluminador-rare {
                                     width: 50%;
                                 }
-                                #rubor-benefit, #stick-fenty, #iluminador-rare{
-                                    width: 44%;
+
+                                #rubor-benefit{
+                                    width: 46%;
                                 }
+
+
 
                         }
                     }
