--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -271,8 +271,26 @@
                                     width: 46%;
                                 }
 
+                                #dr-jart-2,
+                                #bruma-roche,
+                                #bruma-eucerin,
+                                #idraet-1,
+                                #idraet-2 {
+                                    width: 55%;
+                                }
 
+                                #dr-jart,
+                                #pixi{
+                                    width: 61%;
+                                }
 
+                                #bruma-bio{
+                                    width: 51%;
+                                }
+
+                                #idraet-3{
+                                    width: 53%;
+                                }
                         }
                     }
 
