--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,26 +1,21 @@
 //navbar
-#nav-body{
-    --bs-bg-opacity: 0;
-}
 .navbar{
-    #cont-fluid{
-        background-color: #ffffff;
-    justify-content: end;
-    .navbar-collapse{
-    display: flex;
-    flex-direction: column-reverse;
-    align-content: center;
-    color: $mainColor;
-    .nav-item{
-        padding-right: 80px;
-        font-family: $mainFont;
-        font-weight: $fontRg;
-        text-align: center;
-    }
-    }
+    .container-fluid{
+        .navbar-collapse{
+            justify-content: center;
+            .navbar-nav{
+                .nav-item{
+                    padding-right: 90px;
+                    .nav-link{
+                        font-family: $mainFont;
+                        font-weight: $fontBold;
+                    }
+                }
+            }
+        }
     }
 }
-  
+
 //navigation paginas
 .contenedor-navigation {
     display: flex;
