--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -44,6 +44,12 @@
             ul {
                 text-align: left;
                 list-style: none;
+                li{
+                    a{
+                        text-decoration: none;
+                        color: $keyColor;
+                    }
+                }
             }
         }
 
@@ -60,6 +66,12 @@
 
             ul {
                 list-style: none;
+                li{
+                    a{
+                        text-decoration: none;
+                        color: $keyColor;
+                    }
+                }
             }
         }
     }
