--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -79,6 +79,11 @@
                 @include tablet {
                     width: 40%;
                 }
+                
+                @include mobile {
+                    width: 55%;
+                }
+
             }
         }
     }
