--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,11 @@
     width: 40%;
   }
 }
+@media screen and (max-width: 576px) {
+  .iconos .contenedor-icon .cont-icon .img-logos {
+    width: 55%;
+  }
+}
 
 .navbar .container-fluid .navbar-collapse {
   justify-content: center;
@@ -153,6 +158,11 @@
   background-color: white;
   -webkit-box-shadow: 0px 0px 12px -7px rgba(0, 0, 0, 0.45);
   box-shadow: 0px 0px 12px -7px rgba(0, 0, 0, 0.45);
+}
+@media screen and (max-width: 576px) {
+  .contenedor-grid .grid .grids .slide-content .card {
+    height: 470px;
+  }
 }
 .contenedor-grid .grid .grids .slide-content .card .image-content {
   display: flex;
@@ -612,30 +622,6 @@ section .lineas {
   margin-bottom: 15px;
 }
 
-.white {
-  height: 300px;
-  display: flex;
-  justify-content: center;
-}
-.white .error h1 {
-  color: rgb(224, 224, 224);
-  font-size: 18em;
-}
-
-.grey {
-  display: flex;
-  justify-content: center;
-  background-color: rgb(224, 224, 224);
-  height: 200px;
-}
-.grey .align .txt {
-  text-align: center;
-  color: rgb(145, 144, 144);
-}
-.grey .align .btn-secondary {
-  width: 30%;
-}
-
 .align {
   display: flex;
   justify-content: center;
@@ -644,22 +630,41 @@ section .lineas {
   display: flex;
   flex-direction: row;
 }
+.align .error .error-pagina {
+  width: 50%;
+  object-fit: contain;
+}
 .align .error .error-1 {
   font-family: "Montserrat", sans-serif;
-  padding-top: 120px;
+  padding-top: 80px;
 }
 .align .error .error-1 h1 {
   font-weight: 700;
   font-size: 5em;
   color: #BF2A2A;
 }
+@media screen and (max-width: 576px) {
+  .align .error .error-1 h1 {
+    font-size: 3em;
+  }
+}
 .align .error .error-1 h2 {
   font-weight: 600;
   font-size: 2.5em;
   color: #BF2A2A;
 }
+@media screen and (max-width: 576px) {
+  .align .error .error-1 h2 {
+    font-size: 1.8em;
+  }
+}
 .align .error .error-1 h3 {
   font-size: 1.8em;
+}
+@media screen and (max-width: 576px) {
+  .align .error .error-1 h3 {
+    font-size: 1.2em;
+  }
 }
 .align .error .error-1 .btn-secondary {
   --bs-btn-color: #fff;
@@ -676,6 +681,12 @@ section .lineas {
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #e26565;
   --bs-btn-disabled-border-color: #e26565;
+}
+@media screen and (max-width: 576px) {
+  .align .error .error-1 .btn-secondary {
+    width: 50%;
+    font-size: 0.8em;
+  }
 }
 
 .caja-footer {
@@ -723,6 +734,10 @@ section .lineas {
   text-align: left;
   list-style: none;
 }
+.caja-footer .box-footer .links ul li a {
+  text-decoration: none;
+  color: black;
+}
 .caja-footer .box-footer .contacto {
   width: 31%;
   padding-right: 40px;
@@ -735,6 +750,10 @@ section .lineas {
 }
 .caja-footer .box-footer .contacto ul {
   list-style: none;
+}
+.caja-footer .box-footer .contacto ul li a {
+  text-decoration: none;
+  color: black;
 }
 
 /*# sourceMappingURL=main.css.map */
