--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -51,6 +51,9 @@
                     background-color: white;
                     -webkit-box-shadow: 0px 0px 12px -7px rgba(0, 0, 0, 0.45);
                     box-shadow: 0px 0px 12px -7px rgba(0, 0, 0, 0.45);
+                    @include mobile {
+                        height: 470px;
+                    }
 
                     .image-content {
                         display: flex;
