--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -82,6 +82,7 @@
                             font-family: 'Montserrat', sans-serif;
                             font-weight: 700;
                             font-size: 1.2em;
+                            text-align: center;
                         }
 
                         .nombre-producto {
@@ -308,6 +309,7 @@
                             font-family: 'Montserrat', sans-serif;
                             font-weight: 700;
                             font-size: 1.2em;
+                            text-align: center;
                         }
 
                         .nombre-producto-producto {
@@ -343,6 +345,7 @@
                                 font-family: 'Montserrat', sans-serif;
                                 font-weight: 700;
                                 font-size: 18px;
+                                text-align: center;
                             }
                         }
                     }
